[package]
edition = "2024"
name = "alloctest"
version = "0.1.0"
authors = ["Lukas Rose <lukas.rose@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/alloctest.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
terminal = { path = "../../library/terminal" }
concurrent = { path = "../../library/concurrent" }
