[package]
edition = "2024"
name = "meltdown"
version = "0.1.0"
authors = ["Lukas Rose <lukas.rose@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/meltdown.rs"

[dependencies]
# Local dependencies
runtime = { path = "../../library/runtime" }
terminal = { path = "../../library/terminal" }
concurrent = { path = "../../library/concurrent" }
spin = "0.9.8"
